# bzh-DAPLink

./: .clangd  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build.sh  debug_usb.py
.claude/: CLAUDE.md  settings.json
.claude/skills/CodeFormat/: SKILL.md
.claude/skills/ExecDebug/: SKILL.md
.claude/skills/PythonEnv/: SKILL.md
.github/workflows/: build.yml
cmake/: compile_options.cmake  project_common.cmake  toolchain.cmake  toolchain_arm.cmake  toolchain_system.cmake
hal/Peripheral/: CMakeLists.txt  ch32v30x_gpio.h
hal/Startup/: ch32v30x_conf.h  ch32v30x_it.c  startup_ch32v30x_D8C.S  stm32f4xx_hal_conf.h  stm32f4xx_it.c  syscalls.c  sysmem.c  system_ch32v30x.c
hal/ld/: link.ld
src/: DAP_config.h  cmsis_compiler.h  dap_config_checker.c  dap_led_state.c  debug.c  debug.h  device_id.c  device_id.h  main.c  ring_buffer.c  ring_buffer.h  sdi.c  sdi.h  systick.c  systick.h  uart.c  uart.h  uart3.c  uart3.h  uart3_conflict_checker.c
src/usb/: CMakeLists.txt  usb.c  usb.h
src/usb/tinyusb_port/: tusb_config.h  tusb_port.c  tusb_port_cdc.c  tusb_port_hid.c  tusb_port_vendor.c  usb_descriptors.c
src/usb/tinyusb_port/wch/: ch32_usbhs_reg.h
usb/: MS_OS_2_0_desc.docx
usb/USBD/: ch32v30x_usb.h  ch32v30x_usbhs_device.c  ch32v30x_usbhs_device.h  hid_transfer.c  hid_transfer.h  usb_desc.c  usb_desc.h  vcom_serial.c  vcom_serial.h
utils/: flash_cmsisdap.sh  flash_jlink.sh  python_requirements.txt  reset_f411.py  reset_hold.py  rtt_jlink.sh  rtt_monitor.py  sdi_monitor.py  setup_venv.sh
utils/code_format/: AGENTS.md  code_format.py  test.sh
utils/code_format/c_cpp/: .clang-format  formatter.py  style.c.exclude  style.c.include
utils/code_format/python/: formatter.py  ruff.toml  style.py.exclude
